# pathfinding-system

./: .gitignore  LICENSE  README.md
Demo Files/3D/Data Files/: data-neat.csv  data-ql-windows.csv  data-ql.csv
Demo Files/Examples/Drone NEAT/: Assembly-CSharp.csproj
Demo Files/QL/3D/: info-check.csv  info-learn.csv
Examples/Drone NEAT/: Drone.sln
Map Creators/QL Map Creator/: Assembly-CSharp.csproj
Map Creators/QL Map Creator/ProjectSettings/: ProjectSettings.asset  (+1 more)
Release Files/: README.txt
Release Files/data/: info — копия.csv  info-neat.csv  info.csv  input-neat.csv  input-ql.csv  input.csv  output.csv
Source Files/SFML C++/: NEAT-QL.sln  NNWay.sln
Source Files/UNITY C#/: Assembly-CSharp.csproj  RLQL.sln  UNITY C#.sln  Unity.CollabProxy.Editor.csproj  Unity.Rider.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  Unity.Timeline.Editor.csproj  Unity.Timeline.csproj  Unity.VSCode.Editor.csproj  UnityEditor.TestRunner.csproj  UnityEditor.UI.csproj  UnityEngine.TestRunner.csproj  UnityEngine.UI.csproj
Source Files/neat/: CMakeLists.txt
Source Files/neat/lib/sfml/: INSTALL_RECEIPT.json
Source Files/neat/lib/sfml/share/SFML/doc/html/: annotated.html  menudata.js  namespaces.html
Source Files/neat/res/data/: info-learn.csv  new_input.csv
Source Files/neat/src/: Agent.hpp  Brain.cpp  Brain.hpp  Enums.hpp  Layers.cpp  Layers.hpp  Map.cpp  Map.hpp  Population.hpp  main.cpp
Source Files/ql/: CMakeLists.txt
neat/: CMakeLists.txt
neat/src/: Agent.cpp  Brain.cpp  Brain.hpp  Layers.hpp  Map.hpp  Population.hpp
(+246 files in other folders)
